[package]
name = "nephynika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
image = "0.25.2"
lazy_static = "1.5.0"
tempfile = "3.12.0"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
lto = true
debug = 1
